// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal.projects.contributors fetches contributors filtered by project, step 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyNw==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNTIy",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNQ==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 7,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors filtered by project, step, user type, vip 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMg==",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 3,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors sorted by their activities asc 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNQ==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNTIy",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyNw==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 7,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors sorted by their activities desc 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMQ==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMg==",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyNw==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 7,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors that match term parameter 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMg==",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 1,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors that match term, step, userType, vip 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 1,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;
